--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2,67 +2,184 @@
   -- VARIABLES --
 */
 body {
+  background-color: #E3E3E3;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+}
+body::before {
+  position: absolute;
+  height: 300px;
+  top: 0;
+  left: 0;
+  content: "";
+  background: #fb406c;
+  width: 100%;
+  z-index: -1;
+}
+.wrapper {
+  width: 100%;
+  max-width: 1600px;
+  margin: 100px auto;
   display: flex;
   flex-wrap: wrap;
-  background-color: #fb406c;
-  margin: 0;
 }
 #video {
   margin: 10px;
-  width: calc(75% - 20px);
+  padding: 2px;
+  width: calc(70% - 24px);
   height: 95vh;
+  max-height: 720px;
+  border-radius: 3px;
+  background-color: black;
+  align-self: center;
 }
-iframe {
+#video iframe {
   height: 100%;
   width: 100%;
 }
 #app {
   position: relative;
   margin: 10px;
-  width: calc(25% - 22px);
+  width: calc(30% - 22px);
   height: 95vh;
-  border: solid gray 1px;
+  max-height: 720px;
+  align-self: center;
+  border: solid #111 1px;
+  border-radius: 3px;
 }
 .comment_column {
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 8px);
+  height: calc(100% - 8px);
+  background-color: #E3E3E3;
+  border-radius: 3px;
+  padding: 4px;
 }
 .comment_column #comment_box {
   overflow-y: scroll;
-  height: 90%;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+  height: 80%;
   margin: 0;
+  padding: 0;
+}
+.comment_column #comment_box li {
+  padding: 8px;
+  background-color: #E3E3E3;
+  display: flex;
+  flex-direction: column;
+  transition: ease 0.6s;
+}
+.comment_column #comment_box li:last-child {
+  background-color: rgba(200, 200, 200, 0.8);
+}
+.comment_column #comment_box li .comment_header {
+  padding: 10px 0;
+}
+.comment_column #comment_box li .comment_header span {
+  padding: 0 8px;
+}
+.comment_column #comment_box li .comment_header span.avatar {
+  font-size: 24px;
+  padding: 6px;
+  background-color: #fb406c;
+  border-radius: 50%;
 }
 .comment_column form {
-  height: 10%;
-  width: 100%;
+  height: 20%;
+  width: calc(100% - 20px);
   display: flex;
   flex-wrap: nowrap;
-  border-top: solid gray 1px;
-  transition: height ease 1s;
+  flex-direction: column;
+  background-color: #E3E3E3;
+  border-top: solid #111 1px;
+  padding: 0 10px;
 }
-.comment_column form .textbox {
+.comment_column form .label {
+  text-align: center;
+  font-size: 18px;
+  padding: 20px 5px;
+  font-weight: bold;
+}
+.comment_column form .form-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+}
+.comment_column form .input {
   margin: 6px 2px;
-  padding: 5px;
-  width: calc(80% - 14px);
-  height: 20%;
-  align-self: center;
+  padding: 8px;
+  position: relative;
+  height: 30px;
+  width: calc(80% - 18px);
+}
+.comment_column form .input .focus-border {
+  position: absolute;
+  top: 40px;
+  width: 0;
+  left: 50%;
+  background-color: #fb406c;
+  height: 3px;
+  transition: 0.3s;
+}
+.comment_column form .input input[type="text"],
+.comment_column form .input textarea {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #E3E3E3;
+  border: none;
+  border-bottom: solid 1px #111;
+  outline: none;
+  height: 100%;
+  width: 100%;
+}
+.comment_column form .input input[type="text"]:focus ~ .focus-border,
+.comment_column form .input textarea:focus ~ .focus-border {
+  width: 100%;
+  left: 0;
+  transition: 0.3s;
 }
 .comment_column form .button {
   margin: 2px;
-  width: calc(20% - 4px);
+  padding: 8px 0;
   border-radius: 6px;
-  height: 50%;
-  align-self: center;
-}
-.comment_column.login #comment_box {
-  height: 70%;
-}
-.comment_column.login form {
-  height: 30%;
-  transition: height ease 1s;
+  width: calc(20% - 4px);
+  background: #fed900;
+  color: #111;
+  border-color: #fed900;
 }
 footer {
-  background-color: black;
+  background-color: #111;
   height: 100px;
   width: 100%;
+}
+@media only screen and (max-width: 1024px) {
+  .wrapper {
+    max-width: 768px;
+  }
+  #app {
+    width: calc(100% - 20px);
+    height: 600px;
+    max-width: unset;
+  }
+  #app .comment_column #comment_box {
+    height: 60%;
+  }
+  #app .comment_column form {
+    height: 40%;
+  }
+  #video {
+    width: calc(100% - 22px);
+    height: 300px;
+  }
+}
+@media only screen and (max-width: 425px) {
+  .wrapper {
+    margin: 20px auto;
+  }
+  #app .comment_column form .form-row {
+    flex-direction: column;
+  }
+  #app .comment_column form .form-row .button {
+    width: calc(80% - 4px);
+  }
 }
