--- a/src/less/style.less
+++ b/src/less/style.less
@@ -151,6 +151,10 @@ body {
   }
 }
 
+#add-comment-overlay {
+  display: none;
+}
+
 footer {
   background-color: @black;
   height: 100px;
@@ -181,6 +185,29 @@ footer {
 }
 
 @media only screen and (max-width: 425px) {
+  #add-comment-overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    background-color: @pink;
+    border-radius: 50%;
+    bottom: 10px;
+    right: 10px;
+    width: 48px;
+    height: 48px;
+    z-index: 999;
+    a {
+      padding: 5px;
+      width: 33px;
+      height: 33px;
+      img {
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
   .wrapper {
     margin: 20px auto;
   }
