--- a/src/style/style.css
+++ b/src/style/style.css
@@ -147,6 +147,9 @@ body::before {
   color: #111;
   border-color: #fed900;
 }
+#add-comment-overlay {
+  display: none;
+}
 footer {
   background-color: #111;
   height: 100px;
@@ -173,6 +176,29 @@ footer {
   }
 }
 @media only screen and (max-width: 425px) {
+  #add-comment-overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    background-color: #fb406c;
+    border-radius: 50%;
+    bottom: 10px;
+    right: 10px;
+    width: 48px;
+    height: 48px;
+    z-index: 999;
+  }
+  #add-comment-overlay a {
+    padding: 5px;
+    width: 33px;
+    height: 33px;
+  }
+  #add-comment-overlay a img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+  }
   .wrapper {
     margin: 20px auto;
   }
