Adds dockerfile to build the app

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -58,6 +58,7 @@ body {
   background-color: @lightgray;
   border-radius: 3px;
   padding: 4px;
+  padding-right: 3px;
   #comment_box {
     overflow-y: scroll;
     overflow-x: hidden;
